# g4stix

./: CMakeLists.txt  README.md  g4STIX.cc  test.mac  tungsten_grid_effect.mac  vis.mac  vis_det.mac
analysis/: add_trigger.C  convert_response_maxtrix.C  find_best_realistic_parameters.C  make.sh  makeMatrix.C  plot_tungsten_grid.C  xray_response.C
ba133/: ba133.mac
gdml/: WorldAttOnly.gdml  spacecraft.gdml
grid_data/: grids.C  stix_grid_parameters.root
include/: AnalysisManager.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  GridParameters.hh  LocalIonIonInelasticPhysic.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  XrayFluoPhysicsList.hh  XrayFluoPhysicsListMessenger.hh  XrayFluoStepMax.hh  XrayFluoStepMaxMessenger.hh  t2sim.h
macros/: ba133.mac  bkg_tungsten_brem_test.mac  bkg_tungsten_fluor.mac  cfl_test.mac  proton_scan.mac  scan_test.mac  test_alpha.mac  test_pixel0.mac  test_powerE.mac  vis_bkg.mac  vis_cad.mac  vis_cfl.mac  vis_det.mac  wrl.mac  xray_e_minus5.mac  xray_scan.mac  xray_scan_att_in.mac  xray_scan_detector_0.mac  xray_scan_detector_0_att_in.mac
response_matrix/: make.sh  makeMatrix.C
sep_202208/: README.txt  electron_45deg.mac
src/: 2  AnalysisManager.cc  DetectorConstruction.cc  DetectorConstruction_extrude.cc  DetectorMessenger.cc  EventAction.cc  GridParameters.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  XrayFluoPhysicsList.cc  XrayFluoPhysicsListMessenger.cc  XrayFluoStepMax.cc  XrayFluoStepMaxMessenger.cc  t2sim.C
